feat: Use current time for template payloads
Signed-off-by: Simarpreet Singh <simar@linux.com>

--- a/tracee-rules/templates/simple.tmpl
+++ b/tracee-rules/templates/simple.tmpl
@@ -1,4 +1,4 @@
 *** Detection ***
-Timestamp: {{ .Context.Timestamp | unixToRFC3339 }}
+Timestamp: {{ .Context.Timestamp | timeNow }}
 ProcessName: {{ .Context.ProcessName }}
 HostName: {{ .Context.HostName }}
