--- a/tracee-rules/templates/csv.tmpl
+++ b/tracee-rules/templates/csv.tmpl
@@ -1,1 +1,1 @@
-{{ .Context.Timestamp | unixToRFC3339 }},{{ .Context.ProcessName }},{{ .Context.HostName }}
+{{ .Context.Timestamp | timeNow }},{{ .Context.ProcessName }},{{ .Context.HostName }}
