fix: Use current time in findings
Signed-off-by: Simarpreet Singh <simar@linux.com>

--- a/tracee-rules/templates/csv.tmpl
+++ b/tracee-rules/templates/csv.tmpl
@@ -1,1 +1,1 @@
-{{ .Context.Timestamp | timeNow }},{{ .Context.ProcessName }},{{ .Context.HostName }}
+{{ timeNow }},{{ .Context.ProcessName }},{{ .Context.HostName }}
