--- a/tracee-rules/templates/simple.tmpl
+++ b/tracee-rules/templates/simple.tmpl
@@ -1,4 +1,4 @@
 *** Detection ***
-Timestamp: {{ .Context.Timestamp | timeNow }}
+Timestamp: {{ timeNow }}
 ProcessName: {{ .Context.ProcessName }}
 HostName: {{ .Context.HostName }}
