--- a/tracee-rules/templates/csv.tmpl
+++ b/tracee-rules/templates/csv.tmpl
@@ -1,1 +1,1 @@
-{{ .Context.Timestamp | timeNow }},{{ .Context.ProcessName }},{{ .Context.HostName }}
+{{ dateInZone "2006-01-02T15:04:05Z" (now) "UTC" }},{{ .Context.ProcessName }},{{ .Context.HostName }}
