events: use an event struct with header instead of interface{}
this is done to:
1. enable better generic event support in the future
2. mitigate convt2e overhead

--- a/cmd/tracee-rules/templates/csv.tmpl
+++ b/cmd/tracee-rules/templates/csv.tmpl
@@ -1,1 +1,1 @@
-{{ dateInZone "2006-01-02T15:04:05Z" (now) "UTC" }},{{ .Context.ProcessName }},{{ .Context.HostName }}
+{{ dateInZone "2006-01-02T15:04:05Z" (now) "UTC" }},{{ .Event.Payload.ProcessName }},{{ .Event.Payload.HostName }}
