tracee: bump types with new trace.Event
The new trace.Event groups all contextual information under the same
struct.

--- a/cmd/tracee-rules/templates/simple.tmpl
+++ b/cmd/tracee-rules/templates/simple.tmpl
@@ -1,4 +1,4 @@
 *** Detection ***
 Timestamp: {{ dateInZone "2006-01-02T15:04:05Z" (now) "UTC" }}
-ProcessName: {{ .Event.Payload.ProcessName }}
-HostName: {{ .Event.Payload.HostName }}
+ProcessName: {{ .Event.Payload.Context.Process.ProcessName }}
+HostName: {{ .Event.Payload.Context.Process.HostName }}
